--- a/index.html
+++ b/index.html
@@ -15,18 +15,32 @@
     </section>
     <section class="bouton">
         <div class="box" id="box">
-            <img class="nuage nuage1" src="./nuage.png" alt="">
-            <img class="nuage nuage2" src="./nuage.png" alt="">
+            <img class="nuage" style="top: 10%; left: 35%" src="./nuage.png" alt="">
+            <img class="nuage" style="top: 3%; left: 63%" src="./nuage.png" alt="">
+            <div class="etoile" style="top: 20%; left: 10%;"></div>
+            <div class="etoile" style="top: 15%; left: 15%;"></div>
+            <div class="etoile" style="top: 10%; left: 12%;"></div>
+            <div class="etoile" style="top: 20%; left: 10%;"></div>
+            <div class="etoile" style="top: 8%; left: 40%;"></div>
+            <div class="etoile" style="top: 5%; left: 45%;"></div>
             <div class="ville1">
-                <div class="nuit"></div>
+                <div class="nuit">
+                    <div class="fenetre_nuit" style="top: 52%; left: 11%;"></div>
+                    <div class="fenetre_nuit" style="top: 28%; left: 18%;"></div>
+                    <div class="fenetre_nuit" style="top: 35%; left: 18%;"></div>
+                    <div class="fenetre_nuit" style="top: 60%; left: 37%;"></div>
+                    <div class="fenetre_nuit" style="top: 19%; left: 48%;"></div>
+                    <div class="fenetre_nuit" style="top: 27%; left: 57%;"></div>
+                    <div class="fenetre_nuit" style="top: 33%; left: 57%;"></div>
+                </div>
                 <div class="jour">
-                    <div class="fenetre_jour" style="top: 80px; left: 508px;"></div>
-                    <div class="fenetre_jour" style="top: 100px; left: 508px;"></div>
-                    <div class="fenetre_jour" style="top: 85px; left: 360px;"></div>
-                    <div class="fenetre_jour" style="top: 140px; left: 303px;"></div>
-                    <div class="fenetre_jour" style="top: 100px; left: 650px;"></div>
-                    <div class="fenetre_jour" style="top: 120px; left: 650px;"></div>
-                    <div class="fenetre_jour" style="top: 140px; left: 650px;"></div>
+                    <div class="fenetre_jour" style="top: 27%; left: 86.8%"></div>
+                    <div class="fenetre_jour" style="top: 33%; left: 86.8%;"></div>
+                    <div class="fenetre_jour" style="top: 20%; left: 77%;"></div>
+                    <div class="fenetre_jour" style="top: 52%; left: 67.8%;"></div>
+                    <div class="fenetre_jour" style="top: 35.8%; left: 60.2%;"></div>
+                    <div class="fenetre_jour" style="top: 41.8%; left: 60.2%;"></div>
+                    <div class="fenetre_jour" style="top: 28%; left: 47.8%;"></div>
                 </div>                
             </div>
             <div class="ville2">
